// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders authenticated 1`] = `
<div
  className="Home"
>
  <button
    className="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-contained-10 MuiButton-containedSecondary-12 MuiButton-raised-13 MuiButton-raisedSecondary-15"
    disabled={false}
    margin="normal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": 10,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      API
    </span>
    <span
      className="MuiTouchRipple-root-26"
    />
  </button>
  <button
    className="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-contained-10 MuiButton-containedPrimary-11 MuiButton-raised-13 MuiButton-raisedPrimary-14"
    disabled={false}
    margin="normal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": 10,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      Logout
    </span>
    <span
      className="MuiTouchRipple-root-26"
    />
  </button>
</div>
`;

exports[`<Home /> renders not authenticated 1`] = `
<div
  className="Home"
>
  <button
    className="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-contained-10 MuiButton-containedSecondary-12 MuiButton-raised-13 MuiButton-raisedSecondary-15"
    disabled={false}
    margin="normal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": 10,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      API
    </span>
    <span
      className="MuiTouchRipple-root-26"
    />
  </button>
</div>
`;

exports[`<Home /> renders not authenticated 2`] = `
<div
  className="Home"
>
  <button
    className="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-contained-10 MuiButton-containedSecondary-12 MuiButton-raised-13 MuiButton-raisedSecondary-15"
    disabled={false}
    margin="normal"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": 10,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      API
    </span>
    <span
      className="MuiTouchRipple-root-26"
    />
  </button>
</div>
`;
